--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "composite": true,
     "module": "esnext",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "types": ["cypress"]
   },
-  "include": ["vite.config.ts"]
+  "include": ["vite.config.ts", "cypress/**/*.ts"]
 }
